# coq-prob-ax

./: .gitignore  README.md  _CoqProject  coq-proba-ax.opam  dune-project
src/: applications.v.bak  chain.v  ctxequiv.v  determinism.v  dune  ennr.v  entropy.v  integration.v  properties_of_relations.v  relations.v  syntax.v  utils.v
